# termpixels

./: .gitignore  Cargo.toml  README.md
examples/: borders.rs  green_box.rs  inputs.rs  layers.rs  simple_object.rs  snake.rs
src/: app.rs  border.rs  canvas.rs  core.rs  event.rs  exit_code.rs  lib.rs  prelude.rs  types.rs
src/views/: border.rs
termpixels_derive/: Cargo.toml
termpixels_derive/src/: lib.rs
