[package]
name = "termpixels"
description = "A work in progress TUI framework."
readme = "README.md"
repository = "https://github.com/sayanarijit/termpixels"
version = "0.2.1"
authors = ["Arijit Basu <sayanarijit@gmail.com>"]
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
termion = "1.5"
