[package]
name = "termpixels"
description = "A work in progress TUI framework."
readme = "README.md"
repository = "https://github.com/sayanarijit/termpixels"
version = "0.4.1"
authors = ["Arijit Basu <sayanarijit@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termpixels_derive = "0.4.0"
ansi_term = "0.12"
termion = "1.5"
