[package]
name = "termpixels_derive"
description = "A custom derives for termpixels."
version = "0.4.0"
readme = "../README.md"
repository = "https://github.com/sayanarijit/termpixels"
authors = ["Arijit Basu <sayanarijit@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
